--- a/frontend/src/styles/weatherComponent.css
+++ b/frontend/src/styles/weatherComponent.css
@@ -1,20 +1,27 @@
 .weather-container {
+  position: absolute;
+
   background: 
     linear-gradient(0deg, rgba(132, 132, 139, 0.5), rgba(132, 132, 139, 0.5)),
     linear-gradient(113.85deg, rgba(79, 158, 191, 0.74) 28.08%, rgba(61, 128, 156, 0.74) 74.53%);
-
+  
   color: white;
-  padding: 20px;
   border-radius: 15px;
   text-align: center;
-  width: 400px;
+  width: 20%;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
-  margin: auto;
-  
 }
+
 .weather-info {
   text-align: center;
 }
+
+.highLowTemp {
+  display: block;
+  font-size: 14px;
+  font-weight: bold;
+}
+
 
 .temp {
   font-size: 32px;
