--- a/frontend/src/styles/dashboard.css
+++ b/frontend/src/styles/dashboard.css
@@ -1,8 +1,20 @@
 .dashboard {
-    position: relative; /* Ensures child elements with absolute positioning align inside it */
-    width: 1020px;
-    height: 1340px;
-    margin: auto;
-    background-color: #000000;
-  }
-  
+  display: flex; /* Aligns child components in a row */
+  justify-content: space-between; /* Adds space between elements */
+  align-items: flex-start; /* Aligns items at the top */
+  width: 1020px;
+  height: 1340px;
+  margin: auto;
+  background-color: #000000;
+  padding: 20px;
+}
+
+.weather-container {
+  width: 250px;
+  height: 250px; /* Adjust width */
+}
+
+.calendar-container {
+  flex-grow: 1; /* Allows it to take the remaining space */
+  height: 250px;
+}
