--- a/frontend/src/styles/newReminder.css
+++ b/frontend/src/styles/newReminder.css
@@ -52,6 +52,10 @@
     color: var(--text-color);
 }
 
+.new-reminder-date{
+    display:flex;
+}
+
 .new-reminder-inner label {
     margin-bottom: 4px;
     display: inline-block;
