--- a/frontend/src/styles/reminderList.css
+++ b/frontend/src/styles/reminderList.css
@@ -1,4 +1,4 @@
-h2{
+h2 {
     background: #2980b9;
     color: white;
     margin: 0;
@@ -8,13 +8,13 @@ h2{
     font-weight: normal;
 }
 
-ul{
+ul {
     list-style: none;
     margin: 0;
     padding: 0;
 }
 
-li{
+li {
     background: #fff;
     height: auto;
     color: #666;
@@ -23,12 +23,8 @@ li{
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
 
-/* Alternate background for every other li */
-li:nth-child(2n){
-    background: #f7f7f7;
-}
 
-li span{
+li span {
     background: #e74c3c;
     height: 40px;
     margin-right: 20px;
@@ -40,59 +36,35 @@ li span{
     opacity: 0;
 }
 
-li:hover span{
+li:hover span {
     width: 40px;
     opacity: 1.0;
 }
 
-input{
+input {
     font-size: 18px;
     background: #f7f7f7;
     width: 100%;
     padding: 13px 13px 13px 20px;
     box-sizing: border-box;
     color: #2980b9;
-    border: 3px solid rgba(0,0,0,0);
+    border: 3px solid rgba(0, 0, 0, 0);
 }
 
-input:focus{
+input:focus {
     background: white;
     border: 3px solid #2980b9;
     outline: none;
 }
 
-.completed{
+.completed {
     color: gray;
     text-decoration: line-through;
 }
 
-.complete-button {
-  background-color: #2980b9;
-  color: white;
-  border: none;
-  padding: 5px 15px;
-  cursor: pointer;
-  font-size: 14px;
-  text-transform: uppercase;
-  transition: background-color 0.3s;
-}
-
-.reminder-container {
-    width: 100%; 
-    height: 600px; 
-    color: white;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-  }
-
-.complete-button:hover {
-  background-color: #1c6f94;
-}
-
 .completed-tasks {
     padding: 0 18px;
-    display: block; 
+    display: block;
     overflow: hidden;
     max-height: 0px;
     transition: max-height 0.5s ease-in-out;
@@ -102,34 +74,36 @@ input:focus{
     max-height: 100%;
 }
 
-.completed-task-header{
+.completed-task-header {
     cursor: pointer;
     color: white;
 }
 
-.add-reminder{
+.add-reminder {
     cursor: pointer;
     float: right;
 }
-.test{
+
+.test {
     cursor: pointer;
 }
 
-.tasks{
+.tasks {
     overflow-y: scroll;
 }
 
-.overlay{
-    position: absolute;   
+.overlay {
+    position: absolute;
     top: 0;
     left: 0;
-    width: 100%; 
+    width: 100%;
     height: 100%;
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(0, 0, 0, 0.5);
     z-index: 5;
     display: none;
 }
 
-.overlay.show, .new-reminder.show{
+.overlay.show,
+.new-reminder.show {
     display: block;
 }
