--- a/frontend/src/styles/reminder.css
+++ b/frontend/src/styles/reminder.css
@@ -1,8 +1,7 @@
 .reminder-container {
   width: 100%;
-  height: 600px;
+  height: 100%;
   color: white;
-  position: relative;
   display: flex;
   flex-direction: column;
 }
@@ -37,7 +36,8 @@
 #reminder-description {
   grid-column: 1/3;
   align-self:flex-start;
-  
+  overflow-wrap: anywhere;
+  padding-bottom: 5px;
 }
 
 #reminder-due-date {
