--- a/frontend/src/styles/newReminder.css
+++ b/frontend/src/styles/newReminder.css
@@ -10,14 +10,13 @@
 }
 
 .new-reminder {
-    position: fixed;
+    position: absolute;
     inset: 0;
     z-index: 10;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: var(--bg-overlay);
     font-family: var(--font-family);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .new-reminder-outer {
