--- a/frontend/src/styles/reminderList.css
+++ b/frontend/src/styles/reminderList.css
@@ -71,7 +71,8 @@ input:focus {
 }
 
 .completed-tasks.active {
-    max-height: 100%;
+    max-height: 580px;
+    overflow-y: scroll;
 }
 
 .completed-task-header {
@@ -90,6 +91,7 @@ input:focus {
 
 .tasks {
     overflow-y: scroll;
+    flex-grow: 1;
 }
 
 .overlay {
